Update: Fix version control

--- a/hackbotbi-web/src/Login/Login.css
+++ b/hackbotbi-web/src/Login/Login.css
@@ -50,5 +50,14 @@ input:focus {
 }
 
 .register-btn {
+    margin-top: 2rem;
     width: 12rem;
+}
+
+.input-container {
+    padding: 1rem;
+}
+
+h1 {
+    margin: auto;
 }
