--- a/hackbotbi-web/src/Menu/Menu.css
+++ b/hackbotbi-web/src/Menu/Menu.css
@@ -1,6 +1,8 @@
 .navigation-menu-container {
     width: 100%;
     height: 4rem;
+    position: fixed;
+    top: 0;
     margin: 0;
     padding: 0;
     background-color: var(--mainColor);
